--- a/ToDoJsf/src/main/webapp/pages/testJSF.xhtml
+++ b/ToDoJsf/src/main/webapp/pages/testJSF.xhtml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <!DOCTYPE html>
 <html xlmns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://xmlns.jcp.org/jsf/html">
+	xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:pe="http://primefaces.org/ui/extensions">
 <h:head>
 	<meta charset="UTF-8" />
 	<title>Testando JSF</title>
