--- a/ToDoJsf/src/main/webapp/pages/testJSF.xhtml
+++ b/ToDoJsf/src/main/webapp/pages/testJSF.xhtml
@@ -3,12 +3,54 @@
 <html xlmns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:p="http://primefaces.org/ui"
-	xmlns:pe="http://primefaces.org/ui/extensions">
+	xmlns:f="http://java.sun.com/jsf/core">
 <h:head>
 	<meta charset="UTF-8" />
 	<title>Testando JSF</title>
 </h:head>
 <h:body>
-	<h:outputText value="Testando JSF" />
+	<h:form>
+		<!-- 		<h3>Cadastrar Tarefa</h3>
+		<span class="ui-float-label"> <p:inputText id="input-name"
+				value="#{task.name}" /> <p:outputLabel for="@previous" value="Nome" />
+		</span>
+		<p:separator />
+		<span class="ui-float-label"> <p:inputText
+				id="input-description" value="#{task.description}" /> <p:outputLabel
+				for="@previous" value="Descrição" />
+		</span>
+		<p:commandButton value="Cadastrar" id="button_cadastrar" action="#{taskBean.save}" style="margin-right:20px;" ajax="false" />
+ -->
+		<p:panel header="Lista de Tarefas">
+			<p:dataTable emptyMessage="Sem tarefas por enquanto!">
+				<f:facet name="header">
+					<p:commandButton value="Novo"
+						oncomplete="PF('dialogNewTask').show();" />
+				</f:facet>
+				<p:column headerText="Nome">
+				</p:column>
+				<p:column headerText="Descrição">
+				</p:column>
+			</p:dataTable>
+		</p:panel>
+	</h:form>
+
+	<p:dialog header="Cadastrar Tarefa" widgetVar="dialogNewTask"
+		resizable="false" modal="true">
+		<h:form>
+			<h:panelGrid columns="2">
+				<p:outputLabel value="Nome:" />
+				<p:inputText size="30" maxlength="50" />
+				<p:outputLabel value="Descrição:" />
+				<p:inputText size="50" maxlength="140" />
+			</h:panelGrid>
+			<h:panelGrid columns="2">
+				<p:commandButton value="Cadastrar" actionListener="#{taskBean.test()}" />
+				<p:commandButton value="Cancelar" oncomplete="PF('dialogNewTask').hide();"/>
+			</h:panelGrid>
+
+		</h:form>
+	</p:dialog>
+
 </h:body>
 </html>
