--- a/ToDoJsf/src/main/webapp/pages/testJSF.xhtml
+++ b/ToDoJsf/src/main/webapp/pages/testJSF.xhtml
@@ -45,7 +45,7 @@
 				<p:inputText size="50" maxlength="140" />
 			</h:panelGrid>
 			<h:panelGrid columns="2">
-				<p:commandButton value="Cadastrar" actionListener="#{taskBean.test()}" />
+				<p:commandButton value="Cadastrar" actionListener="#{myBean.test}" />
 				<p:commandButton value="Cancelar" oncomplete="PF('dialogNewTask').hide();"/>
 			</h:panelGrid>
 
