--- a/ToDoJsf/src/main/webapp/pages/testJSF.xhtml
+++ b/ToDoJsf/src/main/webapp/pages/testJSF.xhtml
@@ -54,7 +54,7 @@
 		</p:panel>
 	</h:form>
 
-	<p:dialog header="Cadastrar Tarefa" widgetVar="dialogNewTask"
+	<p:dialog header="Salvar Tarefa" widgetVar="dialogNewTask"
 		resizable="false" modal="true">
 		<h:form id="formTask">
 			<h:panelGrid columns="2" id="panelGrid">
@@ -65,7 +65,7 @@
 					value="#{myBean.task.description}" />
 			</h:panelGrid>
 			<h:panelGrid columns="2">
-				<p:commandButton value="Cadastrar" actionListener="#{myBean.save}"
+				<p:commandButton value="Salvar" actionListener="#{myBean.save}"
 					update=":message :formTask:panelGrid :myForm:dataTable"
 					oncomplete="PF('dialogNewTask').hide();" />
 				<p:commandButton value="Cancelar"
