Removendo atributo validatorMessage

--- a/ToDoJsf/src/main/webapp/pages/testJSF.xhtml
+++ b/ToDoJsf/src/main/webapp/pages/testJSF.xhtml
@@ -59,7 +59,7 @@
 		<h:form id="formTask">
 			<h:panelGrid columns="2" id="panelGrid">
 				<p:outputLabel value="Nome: *" />
-				<p:inputText size="30" required="true" validatorMessage="Nome é obrigatório!" label="Campo nome" maxlength="50" value="#{myBean.task.name}" />
+				<p:inputText size="30" required="true" label="Campo nome" maxlength="50" value="#{myBean.task.name}" />
 				<p:outputLabel value="Descrição:" />
 				<p:inputText size="50" maxlength="140"
 					value="#{myBean.task.description}" />
